Added tired as synonym for sleepy

--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
       <li><div><img src="graphics/emojis/angry.png"> :<span class="name">angry</span>:</div></li>
       <li><div><img src="graphics/emojis/rage.png"> :<span class="name">rage</span>:</div></li>
       <li><div><img src="graphics/emojis/triumph.png"> :<span class="name">triumph</span>:</div></li>
-      <li><div><img src="graphics/emojis/sleepy.png"> :<span class="name">sleepy</span>:</div></li>
+      <li><div><img src="graphics/emojis/sleepy.png"> :<span class="name" data-alternative-name="tired">sleepy</span>:</div></li>
       <li><div><img src="graphics/emojis/yum.png"> :<span class="name">yum</span>:</div></li>
       <li><div><img src="graphics/emojis/mask.png"> :<span class="name">mask</span>:</div></li>
       <li><div><img src="graphics/emojis/sunglasses.png"> :<span class="name">sunglasses</span>:</div></li>
