--- a/public/index.html
+++ b/public/index.html
@@ -456,7 +456,7 @@
       <li><div><img src="graphics/emojis/video_camera.png"> :<span class="name">video_camera</span>:</div></li>
       <li><div><img src="graphics/emojis/movie_camera.png"> :<span class="name">movie_camera</span>:</div></li>
       <li><div><img src="graphics/emojis/computer.png"> :<span class="name">computer</span>:</div></li>
-      <li><div><img src="graphics/emojis/tv.png"> :<span class="name">tv</span>:</div></li>
+      <li><div><img src="graphics/emojis/tv.png"> :<span class="name" data-alternative-name="television">tv</span>:</div></li>
       <li><div><img src="graphics/emojis/iphone.png"> :<span class="name">iphone</span>:</div></li>
       <li><div><img src="graphics/emojis/phone.png"> :<span class="name">phone</span>:</div></li>
       <li><div><img src="graphics/emojis/telephone.png"> :<span class="name">telephone</span>:</div></li>
