--- a/public/index.html
+++ b/public/index.html
@@ -191,9 +191,9 @@
       <li><div><img src="graphics/emojis/star.png"> :<span class="name">star</span>:</div></li>
       <li><div><img src="graphics/emojis/star2.png"> :<span class="name">star2</span>:</div></li>
       <li><div><img src="graphics/emojis/dizzy.png"> :<span class="name">dizzy</span>:</div></li>
-      <li><div><img src="graphics/emojis/boom.png"> :<span class="name">boom</span>:</div></li>
+      <li><div><img src="graphics/emojis/boom.png"> :<span class="name" data-alternative-name="explosion">boom</span>:</div></li>
       <li><div><img src="graphics/emojis/collision.png"> :<span class="name">collision</span>:</div></li>
-      <li><div><img src="graphics/emojis/anger.png"> :<span class="name">anger</span>:</div></li>
+      <li><div><img src="graphics/emojis/anger.png"> :<span class="name" data-alternative-name="angry">anger</span>:</div></li>
       <li><div><img src="graphics/emojis/exclamation.png"> :<span class="name">exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/question.png"> :<span class="name">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png"> :<span class="name">grey_exclamation</span>:</div></li>
@@ -205,8 +205,8 @@
       <li><div><img src="graphics/emojis/musical_note.png"> :<span class="name">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png"> :<span class="name">fire</span>:</div></li>
       <li><div><img src="graphics/emojis/hankey.png"> :<span class="name">hankey</span>:</div></li>
-      <li><div><img src="graphics/emojis/poop.png"> :<span class="name">poop</span>:</div></li>
-      <li><div><img src="graphics/emojis/shit.png"> :<span class="name">shit</span>:</div></li>
+      <li><div><img src="graphics/emojis/poop.png"> :<span class="name" data-alternative-name="shit">poop</span>:</div></li>
+      <li><div><img src="graphics/emojis/shit.png"> :<span class="name" data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png"> :<span class="name">+1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsup.png"> :<span class="name">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png"> :<span class="name">-1</span>:</div></li>
@@ -253,9 +253,9 @@
       <li><div><img src="graphics/emojis/haircut.png"> :<span class="name">haircut</span>:</div></li>
       <li><div><img src="graphics/emojis/nail_care.png"> :<span class="name">nail_care</span>:</div></li>
       <li><div><img src="graphics/emojis/boy.png"> :<span class="name">boy</span>:</div></li>
-      <li><div><img src="graphics/emojis/girl.png"> :<span class="name">girl</span>:</div></li>
-      <li><div><img src="graphics/emojis/woman.png"> :<span class="name">woman</span>:</div></li>
-      <li><div><img src="graphics/emojis/man.png"> :<span class="name">man</span>:</div></li>
+      <li><div><img src="graphics/emojis/girl.png"> :<span class="name" data-alternative-name="female">girl</span>:</div></li>
+      <li><div><img src="graphics/emojis/woman.png"> :<span class="name" data-alternative-name="female">woman</span>:</div></li>
+      <li><div><img src="graphics/emojis/man.png"> :<span class="name" data-alternative-name="guy">man</span>:</div></li>
       <li><div><img src="graphics/emojis/baby.png"> :<span class="name">baby</span>:</div></li>
       <li><div><img src="graphics/emojis/older_woman.png"> :<span class="name">older_woman</span>:</div></li>
       <li><div><img src="graphics/emojis/older_man.png"> :<span class="name">older_man</span>:</div></li>
@@ -508,8 +508,8 @@
       <li><div><img src="graphics/emojis/pound.png"> :<span class="name" data-alternative-name="money">pound</span>:</div></li>
       <li><div><img src="graphics/emojis/euro.png"> :<span class="name" data-alternative-name="money">euro</span>:</div></li>
       <li><div><img src="graphics/emojis/credit_card.png"> :<span class="name" data-alternative-name="money">credit_card</span>:</div></li>
-      <li><div><img src="graphics/emojis/money_with_wings.png"> :<span class="name">money_with_wings</span>:</div></li>
-      <li><div><img src="graphics/emojis/e-mail.png"> :<span class="name">e-mail</span>:</div></li>
+      <li><div><img src="graphics/emojis/money_with_wings.png"> :<span class="name" data-alternative-name="money">money_with_wings</span>:</div></li>
+      <li><div><img src="graphics/emojis/e-mail.png"> :<span class="name" data-alternative-name="mail, send">e-mail</span>:</div></li>
       <li><div><img src="graphics/emojis/inbox_tray.png"> :<span class="name">inbox_tray</span>:</div></li>
       <li><div><img src="graphics/emojis/outbox_tray.png"> :<span class="name">outbox_tray</span>:</div></li>
       <li><div><img src="graphics/emojis/envelope.png"> :<span class="name">envelope</span>:</div></li>
@@ -632,8 +632,8 @@
       <li><div><img src="graphics/emojis/tea.png"> :<span class="name">tea</span>:</div></li>
       <li><div><img src="graphics/emojis/sake.png"> :<span class="name">sake</span>:</div></li>
       <li><div><img src="graphics/emojis/baby_bottle.png"> :<span class="name">baby_bottle</span>:</div></li>
-      <li><div><img src="graphics/emojis/beer.png"> :<span class="name">beer</span>:</div></li>
-      <li><div><img src="graphics/emojis/beers.png"> :<span class="name">beers</span>:</div></li>
+      <li><div><img src="graphics/emojis/beer.png"> :<span class="name" data-alternative-name="drink">beer</span>:</div></li>
+      <li><div><img src="graphics/emojis/beers.png"> :<span class="name" data-alternative-name="drink">beers</span>:</div></li>
       <li><div><img src="graphics/emojis/cocktail.png"> :<span class="name">cocktail</span>:</div></li>
       <li><div><img src="graphics/emojis/tropical_drink.png"> :<span class="name">tropical_drink</span>:</div></li>
       <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name">wine_glass</span>:</div></li>
@@ -647,7 +647,7 @@
       <li><div><img src="graphics/emojis/curry.png"> :<span class="name">curry</span>:</div></li>
       <li><div><img src="graphics/emojis/fried_shrimp.png"> :<span class="name">fried_shrimp</span>:</div></li>
       <li><div><img src="graphics/emojis/bento.png"> :<span class="name">bento</span>:</div></li>
-      <li><div><img src="graphics/emojis/sushi.png"> :<span class="name">sushi</span>:</div></li>
+      <li><div><img src="graphics/emojis/sushi.png"> :<span class="name" data-alternative-name="japanese">sushi</span>:</div></li>
       <li><div><img src="graphics/emojis/fish_cake.png"> :<span class="name" data-alternative-name="naruto">fish_cake</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_ball.png"> :<span class="name">rice_ball</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_cracker.png"> :<span class="name">rice_cracker</span>:</div></li>
