Added synonym for :alien:

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
       <li><div><img src="graphics/emojis/neutral_face.png"> :<span class="name">neutral_face</span>:</div></li>
       <li><div><img src="graphics/emojis/no_mouth.png"> :<span class="name">no_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/innocent.png"> :<span class="name">innocent</span>:</div></li>
-      <li><div><img src="graphics/emojis/alien.png"> :<span class="name">alien</span>:</div></li>
+      <li><div><img src="graphics/emojis/alien.png"> :<span class="name" data-alternative-name="extraterrestrial">alien</span>:</div></li>
       <li><div><img src="graphics/emojis/yellow_heart.png"> :<span class="name">yellow_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/blue_heart.png"> :<span class="name">blue_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/purple_heart.png"> :<span class="name">purple_heart</span>:</div></li>
