--- a/public/index.html
+++ b/public/index.html
@@ -203,10 +203,10 @@
       <li><div><img src="graphics/emojis/sweat_drops.png"> :<span class="name" data-alternative-name="water">sweat_drops</span>:</div></li>
       <li><div><img src="graphics/emojis/notes.png"> :<span class="name">notes</span>:</div></li>
       <li><div><img src="graphics/emojis/musical_note.png"> :<span class="name">musical_note</span>:</div></li>
-      <li><div><img src="graphics/emojis/fire.png"> :<span class="name">fire</span>:</div></li>
+      <li><div><img src="graphics/emojis/fire.png"> :<span class="name" data-alternative-name="flame">fire</span>:</div></li>
       <li><div><img src="graphics/emojis/hankey.png"> :<span class="name">hankey</span>:</div></li>
       <li><div><img src="graphics/emojis/poop.png"> :<span class="name">poop</span>:</div></li>
-      <li><div><img src="graphics/emojis/shit.png"> :<span class="name">shit</span>:</div></li>
+      <li><div><img src="graphics/emojis/shit.png"> :<span class="name"=data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png"> :<span class="name">+1</span>:</div></li>
       <li><div><img src="graphics/emojis/thumbsup.png"> :<span class="name">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png"> :<span class="name">-1</span>:</div></li>
