--- a/public/index.html
+++ b/public/index.html
@@ -312,7 +312,7 @@
       <li><div><img src="graphics/emojis/sunny.png"> :<span class="name">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name" data-alternative-name="water, rain">umbrella</span>:</div></li>
       <li><div><img src="graphics/emojis/cloud.png"> :<span class="name">cloud</span>:</div></li>
-      <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name">snowflake</span>:</div></li>
+      <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name" data-alternative-name="snow">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png"> :<span class="name">snowman</span>:</div></li>
       <li><div><img src="graphics/emojis/zap.png"> :<span class="name">zap</span>:</div></li>
       <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name">cyclone</span>:</div></li>
