--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
       <li><div><img src="graphics/emojis/kissing.png"> :<span class="name">kissing</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_smiling_eyes.png"> :<span class="name">kissing_smiling_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue.png"> :<span class="name">stuck_out_tongue</span>:</div></li>
-      <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name">sleeping</span>:</div></li>
+      <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name" data-alternative-name="sleep">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png"> :<span class="name">worried</span>:</div></li>
       <li><div><img src="graphics/emojis/frowning.png"> :<span class="name">frowning</span>:</div></li>
       <li><div><img src="graphics/emojis/anguished.png"> :<span class="name">anguished</span>:</div></li>
