--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
       <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name" data-alternative-name="sleep">sleeping</span>:</div></li>
       <li><div><img src="graphics/emojis/worried.png"> :<span class="name">worried</span>:</div></li>
       <li><div><img src="graphics/emojis/frowning.png"> :<span class="name">frowning</span>:</div></li>
-      <li><div><img src="graphics/emojis/anguished.png"> :<span class="name">anguished</span>:</div></li>
+      <li><div><img src="graphics/emojis/anguished.png"> :<span class="name" data-alternative-name="depressed">anguished</span>:</div></li>
       <li><div><img src="graphics/emojis/open_mouth.png"> :<span class="name">open_mouth</span>:</div></li>
       <li><div><img src="graphics/emojis/grimacing.png"> :<span class="name">grimacing</span>:</div></li>
       <li><div><img src="graphics/emojis/confused.png"> :<span class="name">confused</span>:</div></li>
