--- a/public/index.html
+++ b/public/index.html
@@ -113,17 +113,17 @@
 
     <h2>People</h2>
     <ul class="people emojis" id="emoji-people">
-      <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name">bowtie</span>:</div></li>
-      <li><div><img src="graphics/emojis/smile.png"> :<span class="name" data-alternative-name="happy">smile</span>:</div></li>
-      <li><div><img src="graphics/emojis/laughing.png"> :<span class="name">laughing</span>:</div></li>
+      <li><div><img src="graphics/emojis/bowtie.png"> :<span class="name" data-alternative-name="classy, bow">bowtie</span>:</div></li>
+      <li><div><img src="graphics/emojis/smile.png"> :<span class="name" data-alternative-name="happy, cheerful">smile</span>:</div></li>
+      <li><div><img src="graphics/emojis/laughing.png"> :<span class="name" data-alternative-name="lol">laughing</span>:</div></li>
       <li><div><img src="graphics/emojis/blush.png"> :<span class="name">blush</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley.png"> :<span class="name">smiley</span>:</div></li>
       <li><div><img src="graphics/emojis/relaxed.png"> :<span class="name">relaxed</span>:</div></li>
       <li><div><img src="graphics/emojis/smirk.png"> :<span class="name">smirk</span>:</div></li>
       <li><div><img src="graphics/emojis/heart_eyes.png"> :<span class="name" data-alternative-name="love">heart_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing_heart.png"> :<span class="name">kissing_heart</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing_heart.png"> :<span class="name" data-alternative-name="kiss">kissing_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing_closed_eyes.png"> :<span class="name">kissing_closed_eyes</span>:</div></li>
-      <li><div><img src="graphics/emojis/flushed.png"> :<span class="name">flushed</span>:</div></li>
+      <li><div><img src="graphics/emojis/flushed.png"> :<span class="name" data-alternative-name="flustered">flushed</span>:</div></li>
       <li><div><img src="graphics/emojis/relieved.png"> :<span class="name">relieved</span>:</div></li>
       <li><div><img src="graphics/emojis/satisfied.png"> :<span class="name">satisfied</span>:</div></li>
       <li><div><img src="graphics/emojis/grin.png"> :<span class="name">grin</span>:</div></li>
@@ -132,10 +132,10 @@
       <li><div><img src="graphics/emojis/stuck_out_tongue_closed_eyes.png"> :<span class="name">stuck_out_tongue_closed_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/grinning.png"> :<span class="name">grinning</span>:</div></li>
       <li><div><img src="graphics/emojis/kissing.png"> :<span class="name">kissing</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing_smiling_eyes.png"> :<span class="name">kissing_smiling_eyes</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing_smiling_eyes.png"> :<span class="name" data-alternative-name="smooch">kissing_smiling_eyes</span>:</div></li>
       <li><div><img src="graphics/emojis/stuck_out_tongue.png"> :<span class="name">stuck_out_tongue</span>:</div></li>
       <li><div><img src="graphics/emojis/sleeping.png"> :<span class="name">sleeping</span>:</div></li>
-      <li><div><img src="graphics/emojis/worried.png"> :<span class="name" data-alternative-name="frustrated">worried</span>:</div></li>
+      <li><div><img src="graphics/emojis/worried.png"> :<span class="name" data-alternative-name="frustrated, scared">worried</span>:</div></li>
       <li><div><img src="graphics/emojis/frowning.png"> :<span class="name">frowning</span>:</div></li>
       <li><div><img src="graphics/emojis/anguished.png"> :<span class="name">anguished</span>:</div></li>
       <li><div><img src="graphics/emojis/open_mouth.png"> :<span class="name">open_mouth</span>:</div></li>
@@ -162,25 +162,25 @@
       <li><div><img src="graphics/emojis/neckbeard.png"> :<span class="name">neckbeard</span>:</div></li>
       <li><div><img src="graphics/emojis/tired_face.png"> :<span class="name">tired_face</span>:</div></li>
       <li><div><img src="graphics/emojis/angry.png"> :<span class="name">angry</span>:</div></li>
-      <li><div><img src="graphics/emojis/rage.png"> :<span class="name">rage</span>:</div></li>
+      <li><div><img src="graphics/emojis/rage.png"> :<span class="name" data-alternative-name="furious">rage</span>:</div></li>
       <li><div><img src="graphics/emojis/triumph.png"> :<span class="name">triumph</span>:</div></li>
-      <li><div><img src="graphics/emojis/sleepy.png"> :<span class="name" data-alternative-name="tired">sleepy</span>:</div></li>
-      <li><div><img src="graphics/emojis/yum.png"> :<span class="name">yum</span>:</div></li>
+      <li><div><img src="graphics/emojis/sleepy.png"> :<span class="name" data-alternative-name="tired, zzz">sleepy</span>:</div></li>
+      <li><div><img src="graphics/emojis/yum.png"> :<span class="name" data-alternative-name="delicious">yum</span>:</div></li>
       <li><div><img src="graphics/emojis/mask.png"> :<span class="name">mask</span>:</div></li>
       <li><div><img src="graphics/emojis/sunglasses.png"> :<span class="name" data-alternative-name="shades">sunglasses</span>:</div></li>
-      <li><div><img src="graphics/emojis/dizzy_face.png"> :<span class="name">dizzy_face</span>:</div></li>
+      <li><div><img src="graphics/emojis/dizzy_face.png"> :<span class="name" data-alternative-name="ko">dizzy_face</span>:</div></li>
       <li><div><img src="graphics/emojis/imp.png"> :<span class="name">imp</span>:</div></li>
       <li><div><img src="graphics/emojis/smiling_imp.png"> :<span class="name">smiling_imp</span>:</div></li>
       <li><div><img src="graphics/emojis/neutral_face.png"> :<span class="name">neutral_face</span>:</div></li>
       <li><div><img src="graphics/emojis/no_mouth.png"> :<span class="name">no_mouth</span>:</div></li>
-      <li><div><img src="graphics/emojis/innocent.png"> :<span class="name">innocent</span>:</div></li>
+      <li><div><img src="graphics/emojis/innocent.png"> :<span class="name" data-alternative-name="angel">innocent</span>:</div></li>
       <li><div><img src="graphics/emojis/alien.png"> :<span class="name" data-alternative-name="extraterrestrial">alien</span>:</div></li>
       <li><div><img src="graphics/emojis/yellow_heart.png"> :<span class="name">yellow_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/blue_heart.png"> :<span class="name">blue_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/purple_heart.png"> :<span class="name">purple_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/heart.png"> :<span class="name">heart</span>:</div></li>
       <li><div><img src="graphics/emojis/green_heart.png"> :<span class="name">green_heart</span>:</div></li>
-      <li><div><img src="graphics/emojis/broken_heart.png"> :<span class="name">broken_heart</span>:</div></li>
+      <li><div><img src="graphics/emojis/broken_heart.png"> :<span class="name" data-alternative-name="heartbreak">broken_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/heartbeat.png"> :<span class="name">heartbeat</span>:</div></li>
       <li><div><img src="graphics/emojis/heartpulse.png"> :<span class="name">heartpulse</span>:</div></li>
       <li><div><img src="graphics/emojis/two_hearts.png"> :<span class="name">two_hearts</span>:</div></li>
@@ -198,27 +198,27 @@
       <li><div><img src="graphics/emojis/question.png"> :<span class="name">question</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_exclamation.png"> :<span class="name">grey_exclamation</span>:</div></li>
       <li><div><img src="graphics/emojis/grey_question.png"> :<span class="name">grey_question</span>:</div></li>
-      <li><div><img src="graphics/emojis/zzz.png"> :<span class="name" data-alternative-name="sleep">zzz</span>:</div></li>
+      <li><div><img src="graphics/emojis/zzz.png"> :<span class="name" data-alternative-name="sleep, bored">zzz</span>:</div></li>
       <li><div><img src="graphics/emojis/dash.png"> :<span class="name">dash</span>:</div></li>
       <li><div><img src="graphics/emojis/sweat_drops.png"> :<span class="name" data-alternative-name="water">sweat_drops</span>:</div></li>
-      <li><div><img src="graphics/emojis/notes.png"> :<span class="name">notes</span>:</div></li>
-      <li><div><img src="graphics/emojis/musical_note.png"> :<span class="name">musical_note</span>:</div></li>
+      <li><div><img src="graphics/emojis/notes.png"> :<span class="name data-alternative-name="music"">notes</span>:</div></li>
+      <li><div><img src="graphics/emojis/musical_note.png"> :<span class="name" data-alternative-name="music">musical_note</span>:</div></li>
       <li><div><img src="graphics/emojis/fire.png"> :<span class="name">fire</span>:</div></li>
       <li><div><img src="graphics/emojis/hankey.png"> :<span class="name">hankey</span>:</div></li>
-      <li><div><img src="graphics/emojis/poop.png"> :<span class="name" data-alternative-name="shit">poop</span>:</div></li>
+      <li><div><img src="graphics/emojis/poop.png"> :<span class="name" data-alternative-name="shit, turd">poop</span>:</div></li>
       <li><div><img src="graphics/emojis/shit.png"> :<span class="name" data-alternative-name="poop">shit</span>:</div></li>
       <li><div><img src="graphics/emojis/plus1.png"> :<span class="name">+1</span>:</div></li>
-      <li><div><img src="graphics/emojis/thumbsup.png"> :<span class="name">thumbsup</span>:</div></li>
+      <li><div><img src="graphics/emojis/thumbsup.png"> :<span class="name" data-alternative-name="like">thumbsup</span>:</div></li>
       <li><div><img src="graphics/emojis/-1.png"> :<span class="name">-1</span>:</div></li>
-      <li><div><img src="graphics/emojis/thumbsdown.png"> :<span class="name">thumbsdown</span>:</div></li>
+      <li><div><img src="graphics/emojis/thumbsdown.png"> :<span class="name" data-alternative-name="dislike">thumbsdown</span>:</div></li>
       <li><div><img src="graphics/emojis/ok_hand.png"> :<span class="name">ok_hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/punch.png"> :<span class="name">punch</span>:</div></li>
+      <li><div><img src="graphics/emojis/punch.png"> :<span class="name" data-alternative-name="pound">punch</span>:</div></li>
       <li><div><img src="graphics/emojis/facepunch.png"> :<span class="name">facepunch</span>:</div></li>
       <li><div><img src="graphics/emojis/fist.png"> :<span class="name">fist</span>:</div></li>
-      <li><div><img src="graphics/emojis/v.png"> :<span class="name">v</span>:</div></li>
-      <li><div><img src="graphics/emojis/wave.png"> :<span class="name">wave</span>:</div></li>
-      <li><div><img src="graphics/emojis/hand.png"> :<span class="name">hand</span>:</div></li>
-      <li><div><img src="graphics/emojis/raised_hand.png"> :<span class="name">raised_hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/v.png"> :<span class="name" data-alternative-name="peace, deuces">v</span>:</div></li>
+      <li><div><img src="graphics/emojis/wave.png"> :<span class="name" data-alternative-name="hi, hello, bye">wave</span>:</div></li>
+      <li><div><img src="graphics/emojis/hand.png"> :<span class="name" data-alternative-name="stop">hand</span>:</div></li>
+      <li><div><img src="graphics/emojis/raised_hand.png"> :<span class="name" data-alternative-name="stop">raised_hand</span>:</div></li>
       <li><div><img src="graphics/emojis/open_hands.png"> :<span class="name">open_hands</span>:</div></li>
       <li><div><img src="graphics/emojis/point_up.png"> :<span class="name">point_up</span>:</div></li>
       <li><div><img src="graphics/emojis/point_down.png"> :<span class="name">point_down</span>:</div></li>
@@ -251,7 +251,7 @@
       <li><div><img src="graphics/emojis/couple_with_heart.png"> :<span class="name">couple_with_heart</span>:</div></li>
       <li><div><img src="graphics/emojis/massage.png"> :<span class="name">massage</span>:</div></li>
       <li><div><img src="graphics/emojis/haircut.png"> :<span class="name">haircut</span>:</div></li>
-      <li><div><img src="graphics/emojis/nail_care.png"> :<span class="name">nail_care</span>:</div></li>
+      <li><div><img src="graphics/emojis/nail_care.png"> :<span class="name" data-alternative-name="manicure">nail_care</span>:</div></li>
       <li><div><img src="graphics/emojis/boy.png"> :<span class="name">boy</span>:</div></li>
       <li><div><img src="graphics/emojis/girl.png"> :<span class="name" data-alternative-name="female">girl</span>:</div></li>
       <li><div><img src="graphics/emojis/woman.png"> :<span class="name" data-alternative-name="female">woman</span>:</div></li>
@@ -309,15 +309,15 @@
     </ul>
     <h2>Nature</h2>
     <ul class="nature emojis" id="emoji-nature">
-      <li><div><img src="graphics/emojis/sunny.png"> :<span class="name" data-alternative-name="weather">sunny</span>:</div></li>
+      <li><div><img src="graphics/emojis/sunny.png"> :<span class="name" data-alternative-name="weather, sun">sunny</span>:</div></li>
       <li><div><img src="graphics/emojis/umbrella.png"> :<span class="name" data-alternative-name="water, rain">umbrella</span>:</div></li>
       <li><div><img src="graphics/emojis/cloud.png"> :<span class="name">cloud</span>:</div></li>
       <li><div><img src="graphics/emojis/snowflake.png"> :<span class="name">snowflake</span>:</div></li>
       <li><div><img src="graphics/emojis/snowman.png"> :<span class="name">snowman</span>:</div></li>
-      <li><div><img src="graphics/emojis/zap.png"> :<span class="name">zap</span>:</div></li>
+      <li><div><img src="graphics/emojis/zap.png"> :<span class="name" data-alternative-name="weather, lightning">zap</span>:</div></li>
       <li><div><img src="graphics/emojis/cyclone.png"> :<span class="name" data-alternative-name="weather">cyclone</span>:</div></li>
-      <li><div><img src="graphics/emojis/foggy.png"> :<span class="name" data-alternative-name="weather">foggy</span>:</div></li>
-      <li><div><img src="graphics/emojis/ocean.png"> :<span class="name">ocean</span>:</div></li>
+      <li><div><img src="graphics/emojis/foggy.png"> :<span class="name" data-alternative-name="weather, fog">foggy</span>:</div></li>
+      <li><div><img src="graphics/emojis/ocean.png"> :<span class="name" data-alternative-name="waves">ocean</span>:</div></li>
       <li><div><img src="graphics/emojis/cat.png"> :<span class="name" data-alternative-name="animal">cat</span>:</div></li>
       <li><div><img src="graphics/emojis/dog.png"> :<span class="name" data-alternative-name="animal">dog</span>:</div></li>
       <li><div><img src="graphics/emojis/mouse.png"> :<span class="name" data-alternative-name="animal">mouse</span>:</div></li>
@@ -437,16 +437,16 @@
       <li><div><img src="graphics/emojis/sparkler.png"> :<span class="name">sparkler</span>:</div></li>
       <li><div><img src="graphics/emojis/wind_chime.png"> :<span class="name">wind_chime</span>:</div></li>
       <li><div><img src="graphics/emojis/rice_scene.png"> :<span class="name">rice_scene</span>:</div></li>
-      <li><div><img src="graphics/emojis/jack_o_lantern.png"> :<span class="name">jack_o_lantern</span>:</div></li>
-      <li><div><img src="graphics/emojis/ghost.png"> :<span class="name">ghost</span>:</div></li>
+      <li><div><img src="graphics/emojis/jack_o_lantern.png"> :<span class="name" data-alternative-name="halloween">jack_o_lantern</span>:</div></li>
+      <li><div><img src="graphics/emojis/ghost.png"> :<span class="name" data-alternative-name="boo">ghost</span>:</div></li>
       <li><div><img src="graphics/emojis/santa.png"> :<span class="name" data-alternative-name="christmas">santa</span>:</div></li>
       <li><div><img src="graphics/emojis/christmas_tree.png"> :<span class="name">christmas_tree</span>:</div></li>
-      <li><div><img src="graphics/emojis/gift.png"> :<span class="name">gift</span>:</div></li>
+      <li><div><img src="graphics/emojis/gift.png"> :<span class="name" data-alternative-name="present">gift</span>:</div></li>
       <li><div><img src="graphics/emojis/bell.png"> :<span class="name">bell</span>:</div></li>
       <li><div><img src="graphics/emojis/no_bell.png"> :<span class="name">no_bell</span>:</div></li>
       <li><div><img src="graphics/emojis/tanabata_tree.png"> :<span class="name">tanabata_tree</span>:</div></li>
       <li><div><img src="graphics/emojis/tada.png"> :<span class="name">tada</span>:</div></li>
-      <li><div><img src="graphics/emojis/confetti_ball.png"> :<span class="name">confetti_ball</span>:</div></li>
+      <li><div><img src="graphics/emojis/confetti_ball.png"> :<span class="name" data-alternative-name="celebration">confetti_ball</span>:</div></li>
       <li><div><img src="graphics/emojis/balloon.png"> :<span class="name">balloon</span>:</div></li>
       <li><div><img src="graphics/emojis/crystal_ball.png"> :<span class="name">crystal_ball</span>:</div></li>
       <li><div><img src="graphics/emojis/cd.png"> :<span class="name">cd</span>:</div></li>
