--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
       <li><div><img src="graphics/emojis/persevere.png"> :<span class="name">persevere</span>:</div></li>
       <li><div><img src="graphics/emojis/cry.png"> :<span class="name" data-alternative-name="sad, unhappy">cry</span>:</div></li>
       <li><div><img src="graphics/emojis/sob.png"> :<span class="name" data-alternative-name="sad, unhappy">sob</span>:</div></li>
-      <li><div><img src="graphics/emojis/joy.png"> :<span class="name">joy</span>:</div></li>
+      <li><div><img src="graphics/emojis/joy.png"> :<span class="name" data-alternative-name="happy">joy</span>:</div></li>
       <li><div><img src="graphics/emojis/astonished.png"> :<span class="name">astonished</span>:</div></li>
       <li><div><img src="graphics/emojis/scream.png"> :<span class="name" data-alternative-name="halloween, scary">scream</span>:</div></li>
       <li><div><img src="graphics/emojis/neckbeard.png"> :<span class="name">neckbeard</span>:</div></li>
