Added synonyms for alcoholic drinks

--- a/public/index.html
+++ b/public/index.html
@@ -631,13 +631,13 @@
       <li><div><img src="graphics/emojis/fishing_pole_and_fish.png"> :<span class="name">fishing_pole_and_fish</span>:</div></li>
       <li><div><img src="graphics/emojis/coffee.png"> :<span class="name">coffee</span>:</div></li>
       <li><div><img src="graphics/emojis/tea.png"> :<span class="name">tea</span>:</div></li>
-      <li><div><img src="graphics/emojis/sake.png"> :<span class="name">sake</span>:</div></li>
+      <li><div><img src="graphics/emojis/sake.png"> :<span class="name" data-alternative-name="drink alcohol">sake</span>:</div></li>
       <li><div><img src="graphics/emojis/baby_bottle.png"> :<span class="name">baby_bottle</span>:</div></li>
-      <li><div><img src="graphics/emojis/beer.png"> :<span class="name" data-alternative-name="drink">beer</span>:</div></li>
-      <li><div><img src="graphics/emojis/beers.png"> :<span class="name" data-alternative-name="drink">beers</span>:</div></li>
-      <li><div><img src="graphics/emojis/cocktail.png"> :<span class="name">cocktail</span>:</div></li>
+      <li><div><img src="graphics/emojis/beer.png"> :<span class="name" data-alternative-name="drink alcohol">beer</span>:</div></li>
+      <li><div><img src="graphics/emojis/beers.png"> :<span class="name" data-alternative-name="drink alcohol">beers</span>:</div></li>
+      <li><div><img src="graphics/emojis/cocktail.png"> :<span class="name" data-alternative-name="drink alcohol">cocktail</span>:</div></li>
       <li><div><img src="graphics/emojis/tropical_drink.png"> :<span class="name">tropical_drink</span>:</div></li>
-      <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name">wine_glass</span>:</div></li>
+      <li><div><img src="graphics/emojis/wine_glass.png"> :<span class="name" data-alternative-name="drink alcohol">wine_glass</span>:</div></li>
       <li><div><img src="graphics/emojis/fork_and_knife.png"> :<span class="name">fork_and_knife</span>:</div></li>
       <li><div><img src="graphics/emojis/pizza.png"> :<span class="name">pizza</span>:</div></li>
       <li><div><img src="graphics/emojis/hamburger.png"> :<span class="name">hamburger</span>:</div></li>
