Added synonyms for monetary icons.

--- a/public/index.html
+++ b/public/index.html
@@ -503,10 +503,10 @@
       <li><div><img src="graphics/emojis/hammer.png"> :<span class="name" data-alternative-name="tools">hammer</span>:</div></li>
       <li><div><img src="graphics/emojis/seat.png"> :<span class="name">seat</span>:</div></li>
       <li><div><img src="graphics/emojis/moneybag.png"> :<span class="name">moneybag</span>:</div></li>
-      <li><div><img src="graphics/emojis/yen.png"> :<span class="name" data-alternative-name="money">yen</span>:</div></li>
-      <li><div><img src="graphics/emojis/dollar.png"> :<span class="name" data-alternative-name="money">dollar</span>:</div></li>
-      <li><div><img src="graphics/emojis/pound.png"> :<span class="name" data-alternative-name="money">pound</span>:</div></li>
-      <li><div><img src="graphics/emojis/euro.png"> :<span class="name" data-alternative-name="money">euro</span>:</div></li>
+      <li><div><img src="graphics/emojis/yen.png"> :<span class="name" data-alternative-name="bill cash currency money">yen</span>:</div></li>
+      <li><div><img src="graphics/emojis/dollar.png"> :<span class="name" data-alternative-name="bill cash currency money">dollar</span>:</div></li>
+      <li><div><img src="graphics/emojis/pound.png"> :<span class="name" data-alternative-name="bill cash currency money">pound</span>:</div></li>
+      <li><div><img src="graphics/emojis/euro.png"> :<span class="name" data-alternative-name="bill cash currency money">euro</span>:</div></li>
       <li><div><img src="graphics/emojis/credit_card.png"> :<span class="name" data-alternative-name="money">credit_card</span>:</div></li>
       <li><div><img src="graphics/emojis/money_with_wings.png"> :<span class="name" data-alternative-name="money">money_with_wings</span>:</div></li>
       <li><div><img src="graphics/emojis/e-mail.png"> :<span class="name" data-alternative-name="mail, send">e-mail</span>:</div></li>
