--- a/public/index.html
+++ b/public/index.html
@@ -268,13 +268,13 @@
       <li><div><img src="graphics/emojis/princess.png"> :<span class="name">princess</span>:</div></li>
       <li><div><img src="graphics/emojis/smiley_cat.png"> :<span class="name" data-alternative-name="animal, happy">smiley_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/smile_cat.png"> :<span class="name" data-alternative-name="animal, happy">smile_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/heart_eyes_cat.png"> :<span class="name" data-alternative-name="animal">heart_eyes_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/kissing_cat.png"> :<span class="name" data-alternative-name="animal">kissing_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/heart_eyes_cat.png"> :<span class="name" data-alternative-name="animal, love">heart_eyes_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/kissing_cat.png"> :<span class="name" data-alternative-name="animal, love">kissing_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/smirk_cat.png"> :<span class="name" data-alternative-name="animal">smirk_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/scream_cat.png"> :<span class="name" data-alternative-name="animal">scream_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/crying_cat_face.png"> :<span class="name" data-alternative-name="animal">crying_cat_face</span>:</div></li>
-      <li><div><img src="graphics/emojis/joy_cat.png"> :<span class="name" data-alternative-name="animal">joy_cat</span>:</div></li>
-      <li><div><img src="graphics/emojis/pouting_cat.png"> :<span class="name" data-alternative-name="animal">pouting_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/crying_cat_face.png"> :<span class="name" data-alternative-name="animal, sad">crying_cat_face</span>:</div></li>
+      <li><div><img src="graphics/emojis/joy_cat.png"> :<span class="name" data-alternative-name="animal, happy">joy_cat</span>:</div></li>
+      <li><div><img src="graphics/emojis/pouting_cat.png"> :<span class="name" data-alternative-name="animal, sad, unhappy, angry">pouting_cat</span>:</div></li>
       <li><div><img src="graphics/emojis/japanese_ogre.png"> :<span class="name" data-alternative-name="namahage">japanese_ogre</span>:</div></li>
       <li><div><img src="graphics/emojis/japanese_goblin.png"> :<span class="name" data-alternative-name="tengu">japanese_goblin</span>:</div></li>
       <li><div><img src="graphics/emojis/see_no_evil.png"> :<span class="name">see_no_evil</span>:</div></li>
