--- a/public/index.html
+++ b/public/index.html
@@ -388,6 +388,7 @@
       <li><div><img src="graphics/emojis/sunflower.png"> :<span class="name" data-alternative-name="floral">sunflower</span>:</div></li>
       <li><div><img src="graphics/emojis/hibiscus.png"> :<span class="name" data-alternative-name="floral">hibiscus</span>:</div></li>
       <li><div><img src="graphics/emojis/maple_leaf.png"> :<span class="name">maple_leaf</span>:</div></li>
+      <li><div><img src="graphics/emojis/sealion.png"> :<span class="name">sealion</span</span></div></li>
       <li><div><img src="graphics/emojis/leaves.png"> :<span class="name">leaves</span>:</div></li>
       <li><div><img src="graphics/emojis/fallen_leaf.png"> :<span class="name">fallen_leaf</span>:</div></li>
       <li><div><img src="graphics/emojis/herb.png"> :<span class="name">herb</span>:</div></li>
