--- a/public/index.html
+++ b/public/index.html
@@ -857,7 +857,7 @@
       <li><div><img src="graphics/emojis/signal_strength.png"> :<span class="name">signal_strength</span>:</div></li>
       <li><div><img src="graphics/emojis/u5272.png"> :<span class="name" data-alternative-name="wari">u5272</span>:</div></li>
       <li><div><img src="graphics/emojis/u5408.png"> :<span class="name">u5408</span>:</div></li>
-      <li><div><img src="graphics/emojis/u55b6.png"> :<span class="name">u55b6</span>:</div></li>
+      <li><div><img src="graphics/emojis/u55b6.png"> :<span class="name" data-alternative-name="ying">u55b6</span>:</div></li>
       <li><div><img src="graphics/emojis/u6307.png"> :<span class="name">u6307</span>:</div></li>
       <li><div><img src="graphics/emojis/u6708.png"> :<span class="name">u6708</span>:</div></li>
       <li><div><img src="graphics/emojis/u6709.png"> :<span class="name">u6709</span>:</div></li>
