--- a/public/index.html
+++ b/public/index.html
@@ -465,7 +465,7 @@
       <li><div><img src="graphics/emojis/fax.png"> :<span class="name">fax</span>:</div></li>
       <li><div><img src="graphics/emojis/minidisc.png"> :<span class="name">minidisc</span>:</div></li>
       <li><div><img src="graphics/emojis/vhs.png"> :<span class="name">vhs</span>:</div></li>
-      <li><div><img src="graphics/emojis/sound.png"> :<span class="name">sound</span>:</div></li>
+      <li><div><img src="graphics/emojis/sound.png"> :<span class="name" data-alternative-name="loud, noise">sound</span>:</div></li>
       <li><div><img src="graphics/emojis/speaker.png"> :<span class="name">speaker</span>:</div></li>
       <li><div><img src="graphics/emojis/mute.png"> :<span class="name">mute</span>:</div></li>
       <li><div><img src="graphics/emojis/loudspeaker.png"> :<span class="name">loudspeaker</span>:</div></li>
